--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dspy.ts",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "DSPy.ts - Declarative Self-Learning TypeScript: A framework for compositional LM pipelines with self-improving prompt strategies.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "js-pytorch": "^0.7.2",
-    "onnxruntime-web": "^1.20.1"
+    "onnxruntime-web": "^1.20.1",
+    "ts-node": "^10.9.2"
   }
 }
