Add MIPROv2 module for mixed initiative prompting with confidence scoring; update ONNX model, enhance TypeScript configuration, and increment version to 0.1.3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
       "./src/types"
     ]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "examples/**/*"],
   "exclude": ["node_modules", "dist", "**/*.spec.ts"]
 }
