--- a/agents/model-architect/tsconfig.json
+++ b/agents/model-architect/tsconfig.json
@@ -1,30 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "bundler",
-    "lib": ["ES2020", "DOM", "ESNext"],
-    "outDir": "./dist",
-    "rootDir": ".",
+    "lib": ["ES2022", "DOM"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "checkJs": true,
+    "outDir": "./dist",
     "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "typeRoots": [
-      "./src/types",
-      "./node_modules/@types"
-    ],
-    "paths": {
-      "std/*": ["https://deno.land/std@0.220.1/*"]
-    }
+    "noEmit": true
   },
   "include": [
     "src/**/*",
-    "examples/**/*",
-    "dspy/**/*",
-    "tests/**/*"
+    "examples/**/*"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
